custom view background as attrs reference

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/container"
+              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".MainActivity">
 
     <View
+            android:layout_weight="1"
+            android:background="?defaultScreenBackground"
             android:id="@+id/background"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="0dp"/>
 
     <android.support.design.widget.BottomNavigationView
             android:id="@+id/navigation"
@@ -19,4 +22,4 @@
             android:layout_height="@dimen/bottom_bar_height"
             app:menu="@menu/navigation"/>
 
-</FrameLayout>
+</LinearLayout>
