--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,10 +8,13 @@
 
     <color name="green">#4CAF50</color>
     <color name="darkGreen">#1B5E20</color>
+    <color name="backgroundGreen">#E8F5E9</color>
 
     <color name="red">#E53935</color>
     <color name="darkRed">#B71C1C</color>
+    <color name="backgroundRed">#FFEBEE</color>
 
     <color name="blue">#2196F3</color>
     <color name="darkBlue">#0D47A1</color>
+    <color name="backgroundBlue">#E1F5FE</color>
 </resources>
