changed themes names

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,19 +1,19 @@
 <resources>
-    <style name="RedTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="DefaultAppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/red</item>
         <item name="colorPrimaryDark">@color/darkRed</item>
         <item name="colorAccent">@color/darkGrey</item>
         <item name="defaultScreenBackground">@color/backgroundRed</item>
     </style>
 
-    <style name="GreenTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="DefaultAppTheme.GreenTheme">
         <item name="colorPrimary">@color/green</item>
         <item name="colorPrimaryDark">@color/darkGreen</item>
         <item name="colorAccent">@color/darkGrey</item>
         <item name="defaultScreenBackground">@color/backgroundGreen</item>
     </style>
 
-    <style name="BlueTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="DefaultAppTheme.BlueTheme">
         <item name="colorPrimary">@color/blue</item>
         <item name="colorPrimaryDark">@color/darkBlue</item>
         <item name="colorAccent">@color/darkGrey</item>
